--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Excursion</title>
-  <link href="./resources/video/style.css" type="text/css" rel="stylesheet">
+  <link href="./resources/videos/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,15 +13,15 @@
   <!--middle-->
   <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
   <video autoplay muted loop>
-    <source src="resources/video/excursion.mp4" type="video/mp4">
+    <source src="resources/videos/excursion.mp4" type="video/mp4">
   </video>
   <h2>Your personal travel guide</h2>
   <br>
   <h5>Excursion remembers places you like, and recommends new points of interest around you.</h5>
-  <img src="resources/video/camp.jpg" alt="camp"/>
+  <img src="resources/videos/camp.jpg" alt="camp"/>
   <br>
   <br>
-  <img src="resources/video/phone.png" alt="phone"/>
+  <img src="resources/videos/phone.png" alt="phone"/>
   <h2>Coming Soon for Iphone and Android</h2>
   <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
 
